# ohrc_pixi_ws

./: .gitignore  .gitmodules  CITATION.cff  Doxyfile  LICENSE  Odometry_8h.html  Odometry_8h_source.html  Point_8cpp.html  Point_8cpp_source.html  Point_8h.html  Point_8h_source.html  README.md  README__old_8md.html  Twist_8cpp.html  Twist_8cpp_source.html  Twist_8h.html  Twist_8h_source.html  Vector3_8cpp.html  Vector3_8cpp_source.html  Vector3_8h.html  Vector3_8h_source.html  WrenchStamped_8cpp.html  WrenchStamped_8cpp_source.html  WrenchStamped_8h.html  WrenchStamped_8h_source.html  Wrench_8cpp.html  Wrench_8cpp_source.html  Wrench_8h.html  Wrench_8h_source.html  ____init_____8py.html  ____init_____8py_source.html  admittance__controller_8cpp.html  admittance__controller_8cpp_source.html  admittance__controller_8hpp.html  admittance__controller_8hpp_source.html  admittance__teleoperation_8cpp.html  admittance__teleoperation_8cpp_source.html  afterdoc_8h.html  afterdoc_8h_source.html  annotated.html  (+639 more)
.github/workflows/: build.yaml  doxygen-gh-pages.yml  humble-build.yaml  jazzy-build.yaml  kilted-build.yaml  macos-build.yaml  ubuntu-build.yaml  windows-build.yaml
docker/: Dockerfile  README.md  ros_entrypoint.sh
ohrc_automation/: CMakeLists.txt  package.xml
ohrc_automation/include/ohrc_automation/: ohrc_automation.hpp
ohrc_automation/src/controller/: cart_trajectory_impedance_controller.cpp  cart_trajectory_minjerk_controller.cpp  impedance_controller.cpp  joint_trajectory_controller.cpp
ohrc_chatgpt/: CMakeLists.txt
ohrc_common/: CMakeLists.txt  package.xml
ohrc_common/include/ohrc_common/: math_utility.h  model_utility.h  rclcpp_utility.hpp  std_utility.h  subscriber_utility.h  transform_utility.h
ohrc_common/launch/: ft_sensor_filter.launch.py
ohrc_common/src/geometry_msgs_utility/: Point.cpp  Twist.cpp  Vector3.cpp  Wrench.cpp
ohrc_control/: CMakeLists.txt  README.md  package.xml
ohrc_control/include/ohrc_control/: admittance_controller.hpp  base_controllers.hpp  cart_controller.hpp  forwarding_controller.hpp  hybrid_feedback_controller.hpp  interface.hpp  multiple_interface.hpp  my_ik.hpp  no_feedback_controller.hpp  ohrc_control.hpp  ohrc_controller.hpp  position_feedback_controller.hpp  single_interface.hpp
ohrc_control/launch/: ohrc_control.launch.py
ohrc_control/src/: admittance_controller.cpp  cart_controller.cpp  forwarding_controller.cpp  hybrid_feedback_controller.cpp  my_ik.cpp  ohrc_controller.cpp  position_feedback_controller.cpp
ohrc_hw_config/: CMakeLists.txt  README.md  package.xml  sim.md
ohrc_hw_config/config/fr3/: fr3_control_config_vel.yaml  fr3_hw_config.yaml
ohrc_hw_config/config/gen3_lite/: gen3_lite_control_config_vel.yaml  gen3_lite_hw_config.yaml
ohrc_hw_config/config/so101/: so101_control_config_pos.yaml  so101_hw_config.yaml
ohrc_hw_config/config/torobo2/: torobo2_control_config_vel.yaml  torobo2_hw_config.yaml
ohrc_hw_config/config/toroboarm/: toroboarm_control_config_vel.yaml  toroboarm_hw_config.yaml
ohrc_hw_config/config/ur3/: ur3_control_config_vel.yaml  ur3_hw_config.yaml
ohrc_hw_config/config/ur5/: ur5_control_config_vel.yaml  ur5_hw_config.yaml
ohrc_hw_config/config/ur5e/: ur5e_control_config_vel.yaml
ohrc_imitation/: CMakeLists.txt  package.xml
ohrc_imitation/include/ohrc_imitation/: ohrc_imitation.hpp  single_imitation_controller.hpp
ohrc_imitation/launch/: marker_imitation.launch.py  pose_imitation.launch.py  state_topic_imitation.launch.py  twist_topic_imitation.launch.py
ohrc_imitation/src/: marker_imitation.cpp  pose_topic_imitation.cpp  state_topic_imitation.cpp  twist_topic_imitation.cpp
ohrc_msgs/: CMakeLists.txt  package.xml
ohrc_msgs/srv/: SetPriority.srv
ohrc_perception/src/: human_arm_perception.cpp  k4abt_body_state_publisher.cpp
ohrc_shared_control/: CMakeLists.txt
ohrc_teleoperation/: CMakeLists.txt  README.md  README_old.md  package.xml
ohrc_teleoperation/config/: dummy_config.yaml  joy_topic_config.yaml  marker_config.yaml  pose_topic_config.yaml  teleoperation.rviz  teleoperation2.rviz  twist_topic_config.yaml  xr_body_config.yaml
ohrc_teleoperation/include/ohrc_teleoperation/: dummy_interface.hpp  joy_topic_interface.hpp  marker_interface.hpp  pose_topic_interface.hpp  state_topic_interface.hpp  twist_topic_interface.hpp  xr_body_interface.hpp
ohrc_teleoperation/launch/: joy_topic_teleoperation.launch.py  marker_joy_topic_teleoperation.launch.py  marker_teleoperation.launch.py  ohrc_teleoperation.launch.py  pose_topic_teleoperation.launch.py  state_topic_teleoperation.launch.py  twist_topic_teleoperation.launch.py  xr_body_teleoperation.launch.py
ohrc_teleoperation/src/app/: dummy_teleoperation.cpp  joy_topic_teleoperation.cpp  marker_joy_topic_teleoperation.cpp  marker_twist_topic_teleoperation.cpp
ohrc_teleoperation/src/interface/: dummy_interface.cpp  joy_topic_interface.cpp  marker_interface.cpp  pose_topic_interface.cpp  state_topic_interface.cpp  twist_topic_interface.cpp  xr_body_interface.cpp
ohrc_tools/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ohrc_tools/launch/: ft_sensor_filter.launch.py  reset_keyboard_caller.launch.py
ohrc_tools/ohrc_tools/: reaching_game.py  reset_keyboard_caller.py
ohrc_tools/src/: ft_filter.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+126 more)
