<?xml version="1.0"?>
<package format="3">
  <name>ohrc_hw_config</name>
  <version>0.0.0</version>
  <description>The ohrc_hw_config package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, MITv2.1, MITv3 -->
  <exec_depend>ur_simulation_gz</exec_depend>
  <license>TODO</license>


 <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
