<?xml version="1.0"?>
<package format="2">
  <name>ohrc_imitation</name>
  <version>0.1.0</version>
  <description>The ohrc_imitation package</description>


  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>


  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <depend>rclcpp</depend>
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
    <!-- <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>ohrc_control</depend>
  <depend>ohrc_teleoperation</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
