<?xml version="1.0"?>
<package format="2">
  <name>ohrc_imitation</name>
  <version>0.1.0</version>
  <description>The ohrc_imitation package</description>


  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>

  <depend>rclcpp</depend>

  <depend>ohrc_control</depend>
  <depend>ohrc_teleoperation</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
