<?xml version="1.0"?>
<package format="3">
  <name>ohrc_tools</name>
  <version>0.0.1</version>
  <description>The ohrc_tools package</description>

  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>

  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>ohrc_common</depend>
  <depend>ohrc_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
<export>
  <build_type>ament_cmake</build_type>
</export>
</package>
